--- a/wp7-donor/Donor/App.xaml
+++ b/wp7-donor/Donor/App.xaml
@@ -192,6 +192,18 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Foreground" Value="#DEAD86"/>
         </Style>
+		
+        <Style x:Key="TextBox1" TargetType="TextBox">
+            <Setter Property="Background" Value="#FF4F3B34"/>
+            <Setter Property="BorderBrush" Value="#FF4F3B34"/>
+            <Setter Property="Foreground" Value="#FFCBB2A3"/>
+        </Style>
+		
+        <Style x:Key="TextBox1_password" TargetType="PasswordBox">
+            <Setter Property="Background" Value="#FF4F3B34"/>
+            <Setter Property="BorderBrush" Value="#FF4F3B34"/>
+            <Setter Property="Foreground" Value="#FFCBB2A3"/>
+        </Style>
 
     </Application.Resources>
 
