--- a/wp7-donor/Donor/StationsSearchFilter.xaml
+++ b/wp7-donor/Donor/StationsSearchFilter.xaml
@@ -32,8 +32,12 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="Поиск станции" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="Фильтр" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="ApplicationTitle" 
+			Text="Поиск станции" 			
+			FontSize="24" Foreground="White"/>
+            <TextBlock x:Name="PageTitle" 
+			Text="Фильтр" Margin="9,-7,0,0" 
+			FontSize="70" Foreground="White"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
